# FastAPIAuth

./: .dockerignore  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile.helloworld  Dockerfile.helloworld.pdm  Dockerfile.multifile.pdm  Dockerfile.multifile.pdm.compose  Dockerfile.simple  Dockerfile.simple.pdm  Dockerfile.singlefile.pdm.compose  Pipfile  README.md  docker-compose-multifile-pdm.yaml  docker-compose-multifile.yaml  docker-compose-singlefile-pdm.yaml  docker-compose-singlefile.yaml  main.py  pyproject.toml  requirements.txt
examples/01_dockerfile_with_single_file/: Dockerfile  Dockerfile.pipenv  Dockerfile.requirements  README.md  main_pipenv.py  main_requirements.py  requirements.txt
examples/02_docker_compose_with_single_file/: .dockerignore  Dockerfile  Dockerfile.pipenv  README.md  docker-compose-pipenv.yml  docker-compose.yml  main.py  pyproject.toml
examples/03_dockerfile_hello_world_app/: Dockerfile  Dockerfile.pipenv  Pipfile  README.md  pyproject.toml
examples/04_docker_compose_hello_world_app/: Dockerfile  Dockerfile.pipenv  Dockerfile.requirements  README.md  docker-compose-pipenv.yml  docker-compose.yml  pyproject.toml
examples/05_docker_compose_fastapi_users_jwt_bearer/: Dockerfile.pipenv  Dockerfile.requirements  Pipfile  README.md  docker-compose-pipenv.yml  docker-compose.yml
examples/06_docker_compose_fastapi_users_jwt_multi_transport/: Dockerfile.requirements  README.md  (+3 more)
examples/07_docker_compose_fastapi_users_jwt_multi_transport_refactored/: Pipfile  README.md  docker-compose-pipenv.yml  docker-compose.yml  pdm.toml  pyproject.toml
examples/07_docker_compose_fastapi_users_jwt_multi_transport_refactored/src/: app.py  urls.py  users.py
examples/07_docker_compose_fastapi_users_jwt_multi_transport_refactored/src/core/: strategies.py
examples/07_docker_compose_fastapi_users_jwt_multi_transport_refactored/src/core/storage/: sessions.py
examples/pdm/101_docker_compose_oauth2_bearer_fake_db/: pyproject.toml
hello_world/: main.py
(+166 files in other folders)
