[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Pete Lindgren", email = "="},
]
license-expression = "MIT"
dependencies = [
    "fastapi>=0.75.1",
    "pydantic>=1.9.0",
    "uvicorn>=0.17.6",
    "fastapi-users[sqlalchemy]>=10.0.2",
    "aiosqlite>=0.17.0",
    "sqlalchemy>=1.4.36",
]
requires-python = ">=3.12"

[project.urls]
Homepage = ""

[tool.pdm]
[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"
[tool.pdm.dev-dependencies]
dev = []

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
